@@ -3,8 +3,8 @@ INSTRUCTIONS
 ----
 
 1. Place the EU3 savegame file you want to convert in the converter directory (also rename it as input.eu3).
-2. Edit convert.bat with the location of your V2 install.
-3. Run Convert.bat.
+2. Edit configuration.txt with the location of your V2 install (required) and any other parameters you wish to set (optional).
+3. Run EU3ToVic2.exe.
 4. This should generate a conversion file called output.v2
 5. Copy output.v2 to your victoria 2 savegames directory and load the converted savegame in Victoria 2.
 6. If it crashes, leave a message on the forum thread. If possible, upload your EU3 savegame and the log.txt generated by the converter.
