@@ -306,3 +306,4 @@ Revision	Version Updated		Log Message
 284		C++			Major update to HttT province mappings. Minor adjustments to DW mappings.
 285		C++			Fixed an old bug with dead landless nations (some were just mostly dead, not all dead).
 286		C++			Now remove enough older landless nations.
+287		C++			Read certain settings (V2 directory, game type, etc) from configuration.txt
